tests/fixtures/invalid/bool_floordiv_none.py
# Cannot floor divide Bool and None
x: bool = True // None
